[package]
name = "l3_parser"
version = "0.0.1"
authors = ["biglizards"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.7"
proc-macro2 = "1.0.24"

[dependencies.syn]
version = "1.0.53"
default-features = true
features = ["full", "extra-traits"]